dashboard just online and not engaged mechanics show